# niubkb

./: .gitignore  .gitmodules  README.md  config.yaml  makefile  niu-merged.kicad_pcb  niu-merged.yaml  niu-split.yaml  niu.yaml  niubkb.yaml
case/: case.scad  mounting-hole-scad.py
case/dxf/: base.dxf  base_left.dxf  hole_support_left.dxf  outline.dxf
fw/: .gitignore  CMakeLists.txt  Keyboard.c  Keyboard.h  Makefile  README.md  keys.h  makefile  pins.h
fw/src/: main.c  tusb_config.h  usb_descriptors.c
niubkb.pretty/: chiniurou.kicad_mod  niubi.kicad_mod  niurouma.kicad_mod  nixihuanchi.kicad_mod  nixihuanchiniurouma.kicad_mod  tilda.kicad_mod  wohenxihuan.kicad_mod
pcb/: jc.kicad_pcb  mounting-hole-scad.py  niu-compact.kicad_pcb  niu-split.kicad_pcb  niu-v4.kicad_pcb  niu-v5-plate.kicad_pcb  niu-v5.kicad_pcb
